修复悬浮框自适应高度

--- a/public/index.html
+++ b/public/index.html
@@ -57,12 +57,12 @@
     <!-- 悬浮备注框模板 -->
     <div id="note-popup-template" class="note-popup" style="display: none;">
         <div class="popup-header">
-            <span class="drag-handle">::</span>
+            <span class="drag-handle">☰</span>
             <div class="popup-actions">
-                <button class="edit-btn">✏️</button>
-                <button class="delete-btn">🗑️</button>
-                <button class="pin-btn">📌</button>
-                <button class="close-btn">×</button>
+                <button class="edit-btn" title="编辑">✏️</button>
+                <button class="delete-btn" title="删除">🗑️</button>
+                <button class="pin-btn" title="钉住">📌</button>
+                <button class="close-btn" title="关闭">✕</button>
             </div>
         </div>
         <textarea class="note-content" readonly></textarea>
